fix(docs): Improve contrast of gql type links

--- a/docs/assets/styles/_shortcodes.scss
+++ b/docs/assets/styles/_shortcodes.scss
@@ -98,6 +98,9 @@
     em {
         color: #776e71;
     }
+    a:link, a:visited {
+        color: $brand-color;
+    }
 }
 
 /**
